--- a/stats/templates/stats/mosquito_ccaa_rich_iframetest_sites.html
+++ b/stats/templates/stats/mosquito_ccaa_rich_iframetest_sites.html
@@ -6,12 +6,12 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
         <title>MosquitoAlert Stats</title>
 
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css" %}>
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-select/css/bootstrap-select.min.css" %}>
-        <link rel="stylesheet" href={% static "stats/mosquito_ccaa_rich_iframetest.css" %}>
+        <link rel="stylesheet" href="{% static 'tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'tigacrafting/bootstrap-select/css/bootstrap-select.min.css' %}">
+        <link rel="stylesheet" href="{% static 'stats/mosquito_ccaa_rich_iframetest.css' %}">
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src={% static "stats/isotope.pkgd.min.js" %}></script>
-        <script src={% static "stats/mosquito_ccaa_rich_iframetest_sites.js" %}></script>
+        <script src="{% static 'stats/isotope.pkgd.min.js' %}"></script>
+        <script src="{% static 'stats/mosquito_ccaa_rich_iframetest_sites.js' %}"></script>
     </head>
     <body>
         <div class="container">
