--- a/stats/templates/stats/report_stats_ccaa_pie.html
+++ b/stats/templates/stats/report_stats_ccaa_pie.html
@@ -6,9 +6,9 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
         <title>MosquitoAlert Stats</title>
 
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css" %}>
-        <link rel="stylesheet" href={% static "tigacrafting/bootstrap-select/css/bootstrap-select.min.css" %}>
-        <link rel="stylesheet" href={% static "stats/workload.css" %}>
+        <link rel="stylesheet" href="{% static 'tigacrafting/bootstrap-3.2.0-dist/css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'tigacrafting/bootstrap-select/css/bootstrap-select.min.css' %}">
+        <link rel="stylesheet" href="{% static 'stats/workload.css' %}">
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
@@ -19,10 +19,10 @@
         <!--<script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
         <script src="https://code.highcharts.com/maps/modules/offline-exporting.js"></script>-->
         <script src="https://code.highcharts.com/mapdata/countries/es/es-all.js"></script>
-        <script src={% static "stats/isotope.pkgd.min.js" %}></script>
+        <script src="{% static 'stats/isotope.pkgd.min.js' %}"></script>
 
-        <script src={% static "stats/underscore-min.js" %}></script>
-        <script src={% static "stats/report_stats_ccaa_pie.js" %}></script>
+        <script src="{% static 'stats/underscore-min.js' %}"></script>
+        <script src="{% static 'stats/report_stats_ccaa_pie.js' %}"></script>
         <script>
             var map_data = JSON.parse('{{ map_data | escapejs }}');
             var map_data_year = JSON.parse('{{ map_data_year | escapejs }}');
@@ -63,12 +63,14 @@
             </div>
         </div>
         <hr />
-        <div class="grid">
-            <div class="grid-item" id="container_2014"></div>
+        <div class="grid graphCont">
+            <!--<div class="grid-item" id="container_2014"></div>
             <div class="grid-item" id="container_2015"></div>
             <div class="grid-item" id="container_2016"></div>
             <div class="grid-item" id="container_2017"></div>
             <div class="grid-item" id="container_2018"></div>
+            <div class="grid-item" id="container_2019"></div>
+            <div class="grid-item" id="container_2020"></div>-->
             <div class="grid-item" id="container_acum"></div>
         </div>
         <hr />
