Changes in report distribution, regional supervisor receives last report

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -489,7 +489,7 @@
                             <!-- $EURO_SWITCH$ -->
                             {{ form.instance.get_category_euro }}
                         </div>
-                        <strong>Internal Aedes Certainty Comments:</strong><br>
+                        <strong>Internal Certainty Comments:</strong><br>
                         <div style="overflow: auto;height: 150px;border:1px solid #333333;padding:2px;">
                             {{ form.instance.tiger_certainty_notes }}</div><br>
                     {% else %}
