Changed picture height

--- a/stats/templates/stats/user_score.html
+++ b/stats/templates/stats/user_score.html
@@ -76,7 +76,7 @@
             {% for item in score_data.score_detail.adult.score_items %}
             <div id="{{ item.report }}" class="row" style="display:none;">
                 <div class="col-xs-4">
-                    <img url="{{ item.report_photo }}" width="100%">
+                    <img url="{{ item.report_photo }}" height="120px">
                     <p>{{ item.report_date }}</p>
                 </div>
                 <div class="col-xs-8">
